sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:14: error: '(' expected but identifier found.
				if x=0{
                                   ^AlgCocktailSort3:17: error: illegal start of simple expression
		}
                ^AlgCocktailSort3:25: error: '(' expected but identifier found.
				if x=0{
                                   ^AlgCocktailSort3:28: error: illegal start of simple expression
		}
                ^